Table users {
  id uuid [pk]
  login varchar(255) [not null, unique]
  status varchar [not null, default: 'ACTIVE']
  login_verified boolean [not null, default: false]
  google_id varchar [unique]
  password_hash varchar(255)
  password_changed_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table roles {
  id uuid [pk]
  name varchar(50) [not null, unique]
  description varchar(255)
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table permissions {
  id uuid [pk]
  name varchar(100) [not null, unique]
  description varchar(255)
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table user_roles {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  role_id uuid [not null, ref: > roles.id]
  indexes {
    (user_id, role_id) [unique]
  }
}

Table role_permissions {
  id uuid[pk]
  role_id uuid [not null, ref: > roles.id]
  permission_id uuid [not null, ref: > permissions.id]
  indexes {
    (role_id, permission_id) [unique]
  }
}